{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 59,
  "lineage": "c9a3c855-b186-f9a4-8057-e98d75afabc2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dr_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065b55fabe0356472",
            "arn": "arn:aws:ec2:us-east-1:149536452878:elastic-ip/eipalloc-065b55fabe0356472",
            "association_id": "eipassoc-07eda81e915f1e5b2",
            "domain": "vpc",
            "id": "eipalloc-065b55fabe0356472",
            "network_border_group": "us-east-1",
            "network_interface": "eni-089f38328c0edd67f",
            "private_dns": "ip-10-1-1-93.ec2.internal",
            "private_ip": "10.1.1.93",
            "public_dns": "ec2-23-21-151-211.compute-1.amazonaws.com",
            "public_ip": "23.21.151.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:internet-gateway/igw-0b3324f42a64eaac0",
            "id": "igw-0b3324f42a64eaac0",
            "owner_id": "149536452878",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-igw"
            },
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dr_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149536452878:loadbalancer/app/lamp-app-dr-alb/41f87f096a8779cf",
            "arn_suffix": "app/lamp-app-dr-alb/41f87f096a8779cf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lamp-app-dr-alb-1284648996.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:149536452878:loadbalancer/app/lamp-app-dr-alb/41f87f096a8779cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lamp-app-dr-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d30bb6b15dd2be51"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c907a56081d86e4c"
              },
              {
                "subnet_id": "subnet-0fb17508bd9ec3a9a"
              }
            ],
            "subnets": [
              "subnet-0c907a56081d86e4c",
              "subnet-0fb17508bd9ec3a9a"
            ],
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-alb",
              "Purpose": "disaster-recovery"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-alb",
              "Purpose": "disaster-recovery"
            },
            "vpc_id": "vpc-078096071a73dbaae",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dr_alb",
            "aws_subnet.dr_public_1",
            "aws_subnet.dr_public_2",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dr_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149536452878:listener/app/lamp-app-dr-alb/41f87f096a8779cf/dffe2a680f97ad39",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:149536452878:targetgroup/lamp-app-dr-tg/4cc2eb9bb91dd8db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149536452878:listener/app/lamp-app-dr-alb/41f87f096a8779cf/dffe2a680f97ad39",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:149536452878:loadbalancer/app/lamp-app-dr-alb/41f87f096a8779cf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.dr_alb",
            "aws_lb_target_group.dr_tg",
            "aws_security_group.dr_alb",
            "aws_subnet.dr_public_1",
            "aws_subnet.dr_public_2",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dr_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:149536452878:targetgroup/lamp-app-dr-tg/4cc2eb9bb91dd8db",
            "arn_suffix": "targetgroup/lamp-app-dr-tg/4cc2eb9bb91dd8db",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/index.php",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:149536452878:targetgroup/lamp-app-dr-tg/4cc2eb9bb91dd8db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:149536452878:loadbalancer/app/lamp-app-dr-alb/41f87f096a8779cf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lamp-app-dr-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dr_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065b55fabe0356472",
            "association_id": "eipassoc-07eda81e915f1e5b2",
            "connectivity_type": "public",
            "id": "nat-0d0f8414a1d411140",
            "network_interface_id": "eni-089f38328c0edd67f",
            "private_ip": "10.1.1.93",
            "public_ip": "23.21.151.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c907a56081d86e4c",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-nat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.dr_nat",
            "aws_internet_gateway.dr_igw",
            "aws_subnet.dr_public_1",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:route-table/rtb-06b362af8f4c28ea5",
            "id": "rtb-06b362af8f4c28ea5",
            "owner_id": "149536452878",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-db-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-db-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:route-table/rtb-04f629ad23717fc0a",
            "id": "rtb-04f629ad23717fc0a",
            "owner_id": "149536452878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d0f8414a1d411140",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.dr_nat",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_subnet.dr_public_1",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:route-table/rtb-0eadc6cbfa00535cc",
            "id": "rtb-0eadc6cbfa00535cc",
            "owner_id": "149536452878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3324f42a64eaac0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01121adafef10e21f",
            "route_table_id": "rtb-06b362af8f4c28ea5",
            "subnet_id": "subnet-0b9bff570f0a48b5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dr_db",
            "aws_subnet.dr_db_1",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e220119e91235b87",
            "route_table_id": "rtb-06b362af8f4c28ea5",
            "subnet_id": "subnet-0b1501925b4e65bc7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.dr_db",
            "aws_subnet.dr_db_2",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f858b350b3d5cc3b",
            "route_table_id": "rtb-04f629ad23717fc0a",
            "subnet_id": "subnet-006e59a0fb4c1d39a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.dr_nat",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private",
            "aws_subnet.dr_private_1",
            "aws_subnet.dr_public_1",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fff3e653fab1deb",
            "route_table_id": "rtb-04f629ad23717fc0a",
            "subnet_id": "subnet-0d05c2233336f2986"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.dr_nat",
            "aws_internet_gateway.dr_igw",
            "aws_nat_gateway.dr_nat",
            "aws_route_table.dr_private",
            "aws_subnet.dr_private_2",
            "aws_subnet.dr_public_1",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f59521c28f340017",
            "route_table_id": "rtb-0eadc6cbfa00535cc",
            "subnet_id": "subnet-0c907a56081d86e4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_route_table.dr_public",
            "aws_subnet.dr_public_1",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa6d4371e67e1067",
            "route_table_id": "rtb-0eadc6cbfa00535cc",
            "subnet_id": "subnet-0fb17508bd9ec3a9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dr_igw",
            "aws_route_table.dr_public",
            "aws_subnet.dr_public_2",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dr_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:security-group/sg-0d30bb6b15dd2be51",
            "description": "Security group for DR ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d30bb6b15dd2be51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "lamp-app-dr-alb-sg",
            "name_prefix": "",
            "owner_id": "149536452878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dr_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:security-group/sg-056b05ca985544f8e",
            "description": "Security group for DR ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056b05ca985544f8e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d30bb6b15dd2be51"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lamp-app-dr-ecs-sg",
            "name_prefix": "",
            "owner_id": "149536452878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-ecs-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dr_alb",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dr_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:security-group/sg-088be2c2ab9fbf393",
            "description": "Security group for DR RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088be2c2ab9fbf393",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL from Primary Region",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from ECS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056b05ca985544f8e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "lamp-app-dr-rds-sg",
            "name_prefix": "",
            "owner_id": "149536452878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.dr_alb",
            "aws_security_group.dr_ecs",
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:subnet/subnet-0b9bff570f0a48b5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9bff570f0a48b5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536452878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-db-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-db-1"
            },
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:subnet/subnet-0b1501925b4e65bc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1501925b4e65bc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536452878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-db-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-db-2"
            },
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:subnet/subnet-006e59a0fb4c1d39a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006e59a0fb4c1d39a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536452878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-private-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-private-1"
            },
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:subnet/subnet-0d05c2233336f2986",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d05c2233336f2986",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536452878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-private-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-private-2"
            },
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:subnet/subnet-0c907a56081d86e4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c907a56081d86e4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149536452878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-public-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-public-1"
            },
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:subnet/subnet-0fb17508bd9ec3a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb17508bd9ec3a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149536452878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-public-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-public-2"
            },
            "vpc_id": "vpc-078096071a73dbaae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:149536452878:vpc/vpc-078096071a73dbaae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fdc0f64063b6d424",
            "default_route_table_id": "rtb-01108ba670400451a",
            "default_security_group_id": "sg-01f1af5140618eb16",
            "dhcp_options_id": "dopt-0fecf5ea21fdedd67",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078096071a73dbaae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01108ba670400451a",
            "owner_id": "149536452878",
            "tags": {
              "Environment": "production",
              "Name": "lamp-app-dr-vpc",
              "Purpose": "disaster-recovery"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "lamp-app-dr-vpc",
              "Purpose": "disaster-recovery"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}